# lazykit

./: CMakeLists.txt  README  dist.info  iostring.lua  lazytree.lua  lxp.lua  lxptree.lua  xmliter.lua  xmlview.lua
ciostring/: Makefile  iostring.c
doc/: xmliter.html  xmlview.html
examples/: pyrxp.lua  recursive.lua  roundtrip.lua  roundtrip.lua~  rpc.lua  traces.lua  xhtml2wiki.lua  xhtml2wiki.lua~
lib/lua/: ioxmlgen.lua  lxpevent.lua  xmlgen.lua
lib/lua/concatxmlgen/: lua.lua
share/lazykit/doc/: lazytree.html  lxptree.html  xmlconsume.html  xmltree.html
share/lazykit/example/: recursive.lua~
